Update README with SecurityManager note
Added note about deprecated SecurityManager usage and compile command.